--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "ps.lv",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "koa": "^2.12.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^9.0.1",
